# simulation_libero

./: .gitignore  NOTICE  README.md  evaluation_config.yaml  libero_policy_server.py  libero_socket_flags.py  pyproject.toml  run_libero_eval.py
libero/libero/bddl_files/libero_10_lan/: KITCHEN_SCENE3_turn_on_the_stove_and_put_the_moka_pot_on_it.bddl  KITCHEN_SCENE4_put_the_black_bowl_in_the_bottom_drawer_of_the_cabinet_and_close_it.bddl  KITCHEN_SCENE6_put_the_yellow_and_white_mug_in_the_microwave_and_close_it.bddl  KITCHEN_SCENE8_put_both_moka_pots_on_the_stove.bddl  LIVING_ROOM_SCENE1_put_both_the_alphabet_soup_and_the_cream_cheese_box_in_the_basket.bddl  LIVING_ROOM_SCENE2_put_both_the_alphabet_soup_and_the_tomato_sauce_in_the_basket.bddl  LIVING_ROOM_SCENE2_put_both_the_cream_cheese_box_and_the_butter_in_the_basket.bddl  LIVING_ROOM_SCENE5_put_the_white_mug_on_the_left_plate_and_put_the_yellow_and_white_mug_on_the_right_plate.bddl  LIVING_ROOM_SCENE6_put_the_white_mug_on_the_plate_and_put_the_chocolate_pudding_to_the_right_of_the_plate.bddl  STUDY_SCENE1_pick_up_the_book_and_place_it_in_the_back_compartment_of_the_caddy.bddl
libero/libero/bddl_files/libero_10_object/: KITCHEN_SCENE3_turn_on_the_stove_and_put_the_moka_pot_on_it.bddl  KITCHEN_SCENE4_put_the_black_bowl_in_the_bottom_drawer_of_the_cabinet_and_close_it.bddl  KITCHEN_SCENE6_put_the_yellow_and_white_mug_in_the_microwave_and_close_it.bddl  KITCHEN_SCENE8_put_both_moka_pots_on_the_stove.bddl  (+6 more)
libero/libero/bddl_files/libero_goal_lan/: turn_on_the_stove.bddl  (+9 more)
libero/libero/benchmark/: __init__.py
libero/lifelong/: utils.py
versatil_inference/: environment.py  episode_recorder.py  run_evaluation.py  server.py  socket_flags.py
(+289 files in other folders)
